--- a/CarDealership/CarDealership.csproj
+++ b/CarDealership/CarDealership.csproj
@@ -99,7 +99,10 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Catalog\CarCatalog.cs" />
+    <Compile Include="Interfaces\Command.cs" />
+    <Compile Include="Interfaces\Notification.cs" />
     <Compile Include="Model\Car.cs" />
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="ViewModel\RegisterCarViewModel.cs" />
     <Compile Include="View\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
