--- a/CarDealership/CarDealership.csproj
+++ b/CarDealership/CarDealership.csproj
@@ -101,6 +101,7 @@
     </Compile>
     <Compile Include="Catalog\CarCatalog.cs" />
     <Compile Include="Interfaces\Command.cs" />
+    <Compile Include="Interfaces\MessageBox.cs" />
     <Compile Include="Interfaces\Notification.cs" />
     <Compile Include="Model\Car.cs" />
     <Compile Include="Model\Customer.cs" />
