--- a/CarDealership/CarDealership.csproj
+++ b/CarDealership/CarDealership.csproj
@@ -116,8 +116,8 @@
     <Compile Include="View\LoginPage.xaml.cs">
       <DependentUpon>LoginPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\RegisterCarPage.xaml.cs">
-      <DependentUpon>RegisterCarPage.xaml</DependentUpon>
+    <Compile Include="View\RegisterCar.xaml.cs">
+      <DependentUpon>RegisterCar.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -147,7 +147,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\RegisterCarPage.xaml">
+    <Page Include="View\RegisterCar.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
