--- a/CarDealership/CarDealership.csproj
+++ b/CarDealership/CarDealership.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Persistency\Facade.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
+    <Compile Include="ViewModel\NavigationViewModel.cs" />
     <Compile Include="ViewModel\RegisterCarViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\LoginPage.xaml.cs">
