--- a/CarDealership/CarDealership.csproj
+++ b/CarDealership/CarDealership.csproj
@@ -115,6 +115,7 @@
     <Compile Include="ViewModel\InvoiceViewModel.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
     <Compile Include="ViewModel\MainPageViewModel.cs" />
+    <Compile Include="ViewModel\MenuViewModel.cs" />
     <Compile Include="ViewModel\RegisterCarViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\InvoiceView.xaml.cs">
