--- a/CarDealership/CarDealership.csproj
+++ b/CarDealership/CarDealership.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Model\Invoice.cs" />
     <Compile Include="Model\User.cs" />
     <Compile Include="Persistency\Facade.cs" />
+    <Compile Include="Persistency\FacadeCustomer.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="ViewModel\InvoiceViewModel.cs" />
     <Compile Include="ViewModel\LoginViewModel.cs" />
