--- a/CarDealership/project.json
+++ b/CarDealership/project.json
@@ -3,7 +3,8 @@
     "Microsoft.ApplicationInsights": "2.0.1",
     "Microsoft.ApplicationInsights.PersistenceChannel": "1.2.3",
     "Microsoft.ApplicationInsights.WindowsApps": "1.1.1",
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
+    "MyToolkit.Extended": "2.5.12"
   },
   "frameworks": {
     "uap10.0": {}
