--- a/CarDealership/CarDealership.csproj
+++ b/CarDealership/CarDealership.csproj
@@ -142,7 +142,7 @@
     <Content Include="Assets\icon_car.png" />
     <Content Include="Assets\car.png" />
     <Content Include="CarPictures\bmw.png" />
-    <Content Include="CarPictures\opelastra.png" />
+    <Content Include="CarPictures\opel.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
