--- a/CarDealership/CarDealership.csproj
+++ b/CarDealership/CarDealership.csproj
@@ -142,7 +142,13 @@
     <Content Include="Assets\icon_car.png" />
     <Content Include="Assets\car.png" />
     <Content Include="CarPictures\bmw.png" />
+    <Content Include="CarPictures\google.png" />
+    <Content Include="CarPictures\ferrari.png" />
+    <Content Include="CarPictures\mercedes.png" />
     <Content Include="CarPictures\opel.png" />
+    <Content Include="CarPictures\porsche.png" />
+    <Content Include="CarPictures\toyota.png" />
+    <Content Include="CarPictures\volkswagen.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
